--- a/index.html
+++ b/index.html
@@ -4,14 +4,11 @@
 <head>
   <title>Inicio| Malala Jujuy Hostel</title>
   <link rel="stylesheet"  href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
-
-
   <link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap" rel="stylesheet">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Roboto:ital,wght@1,400;1,900&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
-  
-  <link rel="stylesheet" href="./bootstrap-5.1.3-dist/css/bootstrap.css">
+ <link rel="stylesheet" href="./bootstrap-5.1.3-dist/css/bootstrap.css">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta charset="UTF-8">
   <meta name="keywords" content="Viajes Hotel Hostel Jujuy resevar hospedaje ">
@@ -31,9 +28,9 @@
 
 
     <nav class="menu">
-      <div class="logo">
+      <section class="logo">
         <img src="imagenes/logo.png" width="200px" height="100px" alt=""><p>MALALA JUJUY HOSTEL</p>
-      </div>
+      </section>
       <ul>
         <li><a href="index.html">Inicio </a></li>
         <li><a href="galeria.html">Galeria </a></li>
