--- a/galeria.html
+++ b/galeria.html
@@ -30,7 +30,7 @@
             <li><a href="index.html">Inicio </a></li>
             <li><a href="galeria.html">Galeria </a></li>
             <li><a href="informacion.html"> Informacion  </a></li>
-            <li><a href="https://www.booking.com/hotel/ar/malala-jujuy-hostel.es-ar.html?aid=318615;label=Spanish_Argentina_ES_AR_20153587225-6h15TH8LvM25bNckrW9zZwS107692793425%3Apl%3Ata%3Ap1%3Ap2%3Aac%3Aap%3Aneg%3Afi%3Atidsa-162435869305%3Alp9041031%3Ali%3Adec%3Adm;sid=dc4abcda1e515b5c8eb243166fb2d499;dest_id=-1014053;dest_type=city;dist=0;group_adults=2;group_children=0;hapos=1;hpos=1;no_rooms=1;req_adults=2;req_children=0;room1=A%2CA;sb_price_type=total;sr_order=popularity;srepoch=1647261638;srpvid=b924592210bc0128;type=total;ucfs=1&#hotelTmpl">Reservar  </a></li>
+            <li><a href="reservar.html">Reservar  </a></li>
 
             
           </ul>
