--- a/galeria.html
+++ b/galeria.html
@@ -3,7 +3,7 @@
   <head>
     <title>Galeria| Malala Jujuy Hostel</title>
     <link rel="stylesheet"  href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
-  
+    <link rel="shortcut icon " href="imagenes/logo (4).ico" >
   
     <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
