--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
  <link rel="stylesheet" href="./bootstrap-5.1.3-dist/css/bootstrap.css">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="shortcut icon " href="imagenes/logo (4).ico" >
   <meta charset="UTF-8">
   <meta name="keywords" content="Viajes Hotel Hostel Jujuy resevar hospedaje ">
   <meta name="description"
