--- a/reservar.html
+++ b/reservar.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-  <title>Inicio| Malala Jujuy Hostel</title>
+  <title>Reservar | Malala Jujuy Hostel</title>
   <link rel="stylesheet"  href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -11,6 +11,7 @@
  <link rel="stylesheet" href="./bootstrap-5.1.3-dist/css/bootstrap.css">
  <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/toastify-js/src/toastify.min.css">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="shortcut icon " href="imagenes/logo (4).ico" >
   <meta charset="UTF-8">
   <meta name="keywords" content="Viajes Hotel Hostel Jujuy resevar hospedaje ">
   <meta name="description"
